--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,6 @@ nav{
     flex-shrink: 0;
     display: flex;
     align-items: center;
-    min-height: 11vh;
     background-color: black;
     gap:0.5rem;
     flex-wrap: wrap;
@@ -48,7 +47,6 @@ main{
     word-spacing: 0.2rem;
     display: flex;
     flex-direction: column;
-    /* min-height: calc(100vh - 22.4vh); */
     flex:1;
     margin: 1.5rem 0 0rem 2.5rem;
     gap: 0.6rem; 
@@ -93,7 +91,7 @@ nav>input {
     align-items: center;
     color:#fff;
     background: #292626;
-    min-height: 8vh;
+    padding: 2rem;
     word-spacing: 3px;
     font-size: 1.2rem;
     font-family: 'Trebuchet MS', 'Lucida Sans', Arial, sans-serif;
